Add post deck and post deck/{id}/draw

--- a/dealer/src/main/resources/application.properties
+++ b/dealer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=deck
+spring.application.name=dealer
 spring.security.user.name=admin
 spring.security.user.password=murray.1!
+logging.level.org.springframework.security=DEBUG
 
