--- a/dealer/src/main/resources/application.properties
+++ b/dealer/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.security.user.name=admin
 spring.security.user.password=murray.1!
 logging.level.org.springframework.security=DEBUG
 
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.detasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password1
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
