--- a/dealer/src/main/resources/application.properties
+++ b/dealer/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=dealer
 spring.security.user.name=admin
 spring.security.user.password=murray.1!
-logging.level.org.springframework.security=DEBUG
-
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.detasource.driverClassName=org.h2.Driver
@@ -10,3 +8,11 @@ spring.datasource.username=sa
 spring.datasource.password=password1
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+
+spring.app.jwtSecret=divination201302longerKey00000011111119999999999
+spring.app.jwtExpirationMs=1360000
+
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework,SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
