--- a/dealer/src/main/resources/application.properties
+++ b/dealer/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=dealer
-spring.security.user.name=admin
-spring.security.user.password=murray.1!
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.detasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password1
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/user_management
+spring.datasource.username=postgres
+spring.datasource.password=CloudCover.5!
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 spring.app.jwtSecret=divination201302longerKey00000011111119999999999
 spring.app.jwtExpirationMs=1360000
