--- a/dealer/pom.xml
+++ b/dealer/pom.xml
@@ -20,8 +20,10 @@
     <properties>
         <java.version>21</java.version>
         <jwt.version>0.12.6</jwt.version>
+        <lombok.version>1.18.34</lombok.version>
         <junit.version>5.10.2</junit.version>
         <log4j.version>3.0.0-beta1</log4j.version>
+        <postgres.version>42.7.2</postgres.version>
         <encoding>UTF-8</encoding>
         <recompileMode>all</recompileMode>
     </properties>
@@ -41,11 +43,12 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.6.0</version>
+            <version>${postgres.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
