User-app pom work -- An empty project at this point

--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=user-app
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/user_management
+spring.datasource.username=postgres
+spring.datasource.password=CloudCover.5!
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.app.jwtSecret=divination201302longerKey00000011111119999999999
+spring.app.jwtExpirationMs=1360000
+
+logging.level.org.springframework=DEBUG
+logging.level.org.springframework,SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
